fixed burger color not visible

--- a/_sass/_10svg.scss
+++ b/_sass/_10svg.scss
@@ -5,7 +5,8 @@ footer {
   }
 }
 
-.logo {
+.logo,
+.open {
   fill: $brand_color;
 }
 
